@startuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline

title Class Diagram

class ToDoEntry{
    greenSpace
    description
    urgencyDegree
    status
    expectedDuration
}



class SystemUser {
    name
    email
    password
    phone
}


class ToDoEntryRepository {
    - toDoEntryList
    + getToDoEntryList()
    + registerToDoEntry(toDoEntry)
    - toDoEntryIsUnique(toDoEntry)
}


class Repositories {
    - greenSpaceRepository
    - toDoEntryRepository

    - Repositories()
    + getInstance()
    + getGreenSpaceRepository()
    + getToDoEntryRepository()
}

class ToDoEntryMapper {
    + toDTO(toDoEntry)
    + toEntity(toDoEntryDTO)
    + toDtoList(toDoEntryList)
}


class RegisterToDoEntryController {
    - ToDoEntryRepository toDoEntryRepository
    - GreenSpaceRepository greenSpaceRepository
    - ToDoEntryMapper toDoEntryMapper
    - GreenSpaceMapper greenSpaceMapper
    + registerToDoEntry(toDoEntryDTO)
    + getToDoEntryDTOsList()
    - getToDoEntryList()
    - getToDoEntryRepository()
    - getGreenSpaceRepository()

}

class ToDoListGUI {

}

ToDoListGUI .> RegisterToDoEntryController
RegisterToDoEntryController ..> Repositories : repositories
Repositories --> "1" ToDoEntryRepository
Repositories -> Repositories : instance
RegisterToDoEntryController .> ToDoEntryMapper
RegisterToDoEntryController --> ToDoEntryRepository : uses

SystemUser <|- GSM

GSM "1" -- "1" ToDoListGUI
ToDoEntry "*" <-- "1" ToDoEntryRepository : stores
ToDoEntry "*" <-- "1" ToDoEntryMapper : creates

@enduml
